Add friendly optional AI command help
Users need a way to ask about commands without leaving Wangsa.
Keep the feature small: explain commands without executing AI output
or sending saved tasks to a provider.

Add shared built-in help and optional Groq answers in both interfaces.
Run desktop requests in the background, fall back to offline help,
and document the environment setup. Use natural prompts and useful
examples, and cover read-only replies and failures without real keys.